# ai-workshop

./: .gitignore  README.md
backend/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
backend/app/api/dependencies/: user.py
backend/app/api/v1/: users.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: user.py
backend/app/schemas/: user.py
backend/app/services/: user_service.py
data/: bp.md  top-3-ideas.csv
frontend/: README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx  index.tsx
frontend/src/components/experience/: ExperienceCard.tsx
frontend/src/layouts/: MainLayout.tsx
frontend/src/pages/: ExperiencesPage.tsx
notebooks/: ideas-validation.ipynb
